syntax = "proto3";

option go_package = "github.com/irojas14/Lab2INF343/Proto";

package Proto;

// SERVICIOS

service Lider {
    rpc Unirse (SolicitudUnirse) returns (stream RespuestaUnirse);
    rpc VerMonto (SolicitudVerMonto) returns (RespuestaVerMonto);
    rpc EnviarJugada (stream EnvioJugada) returns (stream EnvioJugada);
}

service Pozo {
    rpc VerMonto (SolicitudVerMonto) returns (RespuestaVerMonto);
}

service NameNode {
    rpc RegistrarJugadas (SolicitudRegistrarJugadas) returns (RespuestaRegistrarJugadas);
    rpc DevolverJugadas (SolicitudDevolverJugadas) returns (RespuestaDevolverJugadas);
}

service DataNode {
    rpc RegistrarJugadas (SolicitudRegistrarJugadas) returns (RespuestaRegistrarJugadas);
    rpc DevolverJugadas (SolicitudDevolverJugadas) returns (RespuestaDevolverJugadas);
}

// MENSAJES

// MENSAJES de Solicitud y Respuesta

// ENUMS

enum JUEGO {
    None = 0;
    Luces = 1;
    TirarCuerda = 2;
    TodoNada = 3;
    Fin = 4;
}

enum ESTADO {
    Muerto = 0;
    Vivo = 1;
    Ganador = 2;
}


// LIDER

// Unirse

message SolicitudUnirse {
    string solictud = 1;
}

message RespuestaUnirse {
    enum TIPO {
        Esperar = 0;
        Comenzar = 1;
    }
    TIPO msgTipo = 1;
    JugadorId numJugador = 2;
    JUEGO numJuego = 3;
    RondaId numRonda = 4;
}

// Ver Monto

message SolicitudVerMonto {
}

message RespuestaVerMonto {
    float monto = 1;
}

// Enviar Jugada

message EnvioJugada {
    enum TIPOS {
        None = 0;
        Jugada = 1;
        NuevaRonda = 2;
        NuevoJuego = 3;
        Fin = 4;
        Ganador = 5;
    }
    enum ROLES {
        Jugador = 0;
        Lider = 1;
    }
    TIPOS tipo = 1;
    ROLES rol = 2;
    JugadorId numJugador = 3;
    JUEGO numJuego = 4;
    RondaId numRonda = 5;    
    Jugada jugada = 6;
    ESTADO estado = 7;
    int32 equipo = 8;
}


message SolicitudEnviarJugada {
    PaqueteJugada jugadaInfo = 1;
}

message RespuestaEnviarJugada {
    JUEGO numJuego = 1;
    Jugada jugadaLider = 2;    
    ESTADO estado = 3;
}

// NAMENODE Y DATANODE

// Registrar Jugadas

message SolicitudRegistrarJugadas {
    JugadasJugador jugadasJugador = 1;
}

message RespuestaRegistrarJugadas {
    JugadorId numJugador = 1;
}

// Devolver Jugadas

message SolicitudDevolverJugadas {
    JugadorId numJugador = 1;
}

message RespuestaDevolverJugadas {
    JugadasJugador jugadasJugador = 1;
}

// MENSAJES Structs Auxiliares

message JugadorId {
    int32 val = 1;
}

message RondaId {
    int32 val = 1;
}

message Jugada {
    int32 val = 1;
}

message PaqueteJugada {
    JugadorId numJugador = 1;
    JUEGO numJuego = 2;    
    RondaId numRonda = 3;
    Jugada jugada = 4;
    ESTADO estado = 5;
}

message JugadasRonda {
    RondaId numRonda = 1;
    repeated Jugada jugadas = 2;
}

message JugadasJugador {
    JugadorId numJugador = 1;
    repeated JugadasRonda jugadasRonda = 2;
}

message JugadasRondaJugador {
    JugadorId numJugador = 1;
    JugadasRonda jugadasRonda = 2;
}

message Jugadas {
    repeated JugadasJugador jugadasJugadores = 1;
}